# LandUsePLN

./: .Rbuildignore  .dockerignore  .gitignore  DESCRIPTION  Dockerfile  NAMESPACE  NEWS.md  README.Rmd  README.html  README.md  __rproject.toml.bak  _target_notebook.Rmd  _targets.R  activate-land-use.sh  config.yml  environment.yml  environment_note.md  pyproject.toml  requirements.txt  rproject.toml  stagecoach_manifest.yml
.devcontainer/: devcontainer.json
R/: build_local_pipeline.R  get_bounding_box_for_iso_code.R  link_inputs.R
_targets/meta/: meta
dev/: 0-dev_history.Rmd  build-local-pipeine-docs.R  config_fusen.yaml  config_not_registered.csv  flat_build_local_pipeline.Rmd  flat_calculate_land_use_frac.Rmd  flat_download_landcover_geodata.Rmd  flat_link_inputs.Rmd
env/: environment.yml
inst/: _targets.R  config.yml  get_bounding_box_for_iso_code.py  pipeline-definition.Rmd
inst/extdata/: pipeline-definition.Rmd
man/: LandUsePLN-package.Rd  build_local_pipeline.Rd  crop_landcover_with_box.Rd  download_landcover_geodata.Rd  get_bounding_box_for_iso_code.Rd
tests/: testthat.R
tests/testthat/: test-get_bounding_box_for_iso_code.R
vignettes/: downloading-land-cover-with-geodata.Rmd  environment.Rmd  linking-input-data.Rmd  pipeline-definition.Rmd
