[project]
name = "landusepln"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "country-bounding-boxes>=0.2.3",
    "cryptography<47",
    "stagecoach",
]

[tool.uv.sources]
stagecoach = { git = "https://github.com/GoldenPlanetaryHealthLab/stagecoach", rev = "2-Stage-Data" }
